metadata-retriever/metadata/objects/Round__c.object
<CustomObject>
    <description>PMO: case round, auto number</description>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Start</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Cases1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Cases1</label>
        <referenceTo>Test_Cases__c</referenceTo>
        <relationshipName>Round_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Round__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Round</label>
        <referenceTo>Test_Round__c</referenceTo>
        <relationshipName>Round_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Status</label>
    <nameField>
        <displayFormat>RNo.{0000}</displayFormat>
        <label>Case status number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case_status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>